src/test/deca/context/invalid/tests/EXPR-opbool_wrong_type_operand.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 12: Expresion avec opérandes de type incompatible.
// 
// Historique:
//    cree le 22/01/2022


class Test {
    boolean field = 5 || true;

}